fixed utils typo

--- a/Script/ML/gaussian/gpr_plot_fun.ipynb
+++ b/Script/ML/gaussian/gpr_plot_fun.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "40ef95cf-c7e5-4e4e-bbcc-0510afdbcf5e",
    "metadata": {},
    "outputs": [],
@@ -296,16 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cb047d94-b92f-4372-bd4c-aaf79a530f44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3683780842.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def subset_param(param)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
    "source": [
-    "# subset wrangle user selected parameter c\n",
-    "def subset_param(param)    \n",
+    "def subset_param(param):    \n",
     "\n",
     "    # xr.da subset of parameter data \n",
-    "    return param_avg  = params[param]"
+    "    return param_avg  = params[param]\n",
+    "# subset selected parameter as xr.da\n",
+    "param_avg = subset_param('leafcn')    "
    ]
   },
   {
