notes from meeting with Linnia on GPR. updates to utils, gpr kernel configuration exploration, updated environment to include new packages

--- a/interum_results/common_var.ipynb
+++ b/interum_results/common_var.ipynb
@@ -1256,6 +1256,7 @@
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "# --- Save common variables for future use ---\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# see about appending year into file name to support different avg periods\n",
     "GPP = subset_only('GPP')\n",
     "GPP.to_netcdf('GPP.nc')\n",
     "\n",
@@ -1348,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2b69f823-ec78-4585-82e7-a8670eed9dfc",
    "metadata": {},
    "outputs": [],
@@ -1366,7 +1367,7 @@
     "    # Create scatter plot using hvplot\n",
     "    scatter_plot = data.hvplot.scatter(\n",
     "        x='x', y='y', color='#62c900ff', alpha=0.8,\n",
-    "        xlabel=param, ylabel=var_avg, title='2005-2010 Global Average'\n",
+    "        xlabel=param, ylabel=\"try something\", title='2005-2010 Global Average'\n",
     "    )\n",
     "    return pn.panel(scatter_plot)\n",
     "\n"
