troubleshooting with dan notes, parameter wrangling was funky and likelyl the source of our errors. try using base kernel setting until we can grid tune

--- a/Script/ML/gaussian/improving_gpr_kernel.ipynb
+++ b/Script/ML/gaussian/improving_gpr_kernel.ipynb
@@ -293,7 +293,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "286f1680-9bce-4409-935e-ccac41bd3eeb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
